<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/sixteendp"
    android:tag="cards main container">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="0dp"
        card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/sixteendp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/namee"
                android:text="@string/nametvString"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0f0"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/Rs"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0f0"
                    android:id="@+id/pricee"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/price_of_the_product"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttoninc"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/PlusButtonString"/>
                <TextView
                    android:layout_width="100sp"
                    android:layout_height="30dp"
                    android:paddingLeft="@dimen/sixteendp"
                    android:text="@string/quantitytvString"
                    android:textColor="#00f"
                    android:id="@+id/quanTextView"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttondec"
                    android:text="@string/ButtonminusString"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>